test/sema/tuple-mismatching-element-name-inferred.delta
// RUN: %check_errors %not %delta -typecheck %s

(int a, int b) f() {
    var a = 0;
    var c = 0;
    // CHECK: [[@LINE+1]]:5: error: mismatching return type '(int a, int c)', expected '(int a, int b)'
    return (a, c);
}
